# ProgettoVoli

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: Admin.h.3B821FFCC4E08EAB.idx  AdminLevel.h.1201F50944DD38DF.idx  AdminService.cpp.38ED5C989B7DBBD5.idx  AdminService.h.C8BBF543EACA3C4A.idx  Airport.h.8462C5A607D223F1.idx  AirportRepository.cpp.1B641E19746460BC.idx  AirportRepository.h.092AE48B96B311DB.idx  AuthService.cpp.83E9023507B45A3B.idx  AuthService.h.A47B9E607715A2CD.idx  CLI.cpp.631C661B6D017705.idx  CLI.h.6643259E464C0924.idx  Customer.h.569F45EF90FDFD21.idx  CustomerLevel.h.9E9FF0EE46A1D6A5.idx  CustomerService.cpp.E1A3E8B346A09B55.idx  Flight.h.F81688A7335EAA5D.idx  FlightRepository.cpp.B85F817666FFCE21.idx  FlightRepository.h.2C4F67847ADE1754.idx  IdGenerator.h.F3ECECDCD6183A84.idx  RepositoryInterface.h.695230B8A27F8C5D.idx  RepositoryUtils.cpp.6BF7DA96E100AE54.idx  RepositoryUtils.h.0607CE69AC24BBC3.idx  User.h.8BAA60642C156C61.idx  UserRepository.cpp.15C968D3D94D49CB.idx  UserRepository.h.80D019902273AEE4.idx  UserRole.h.FD5E9D321716321F.idx  UserStruct.h.7550D54DA7D3A1AD.idx  main.cpp.374C8D50F080D2E2.idx
Domain/: Admin.h  Airport.h  Customer.h  Flight.h  Reservation.h  User.h  UserStruct.h
Enums/: AdminLevel.h  UserRole.h
Repositories/: AirportRepository.cpp  AirportRepository.h  FlightRepository.cpp  FlightRepository.h  RepositoryInterface.h  ReservationRepository.cpp  ReservationRepository.h  UserRepository.cpp  UserRepository.h
Services/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  CustomerService.cpp  CustomerService.h
Ui/: CLI.cpp  CLI.h
Utils/: IdGenerator.h  RepositoryUtils.cpp  RepositoryUtils.h
domain/: Admin.cpp  Admin.h  Airport.cpp  Airport.h  Client.cpp  Client.h  Customer.h  Flight.cpp  Flight.h  User.cpp  User.h  UserStruct.h
enums/: AdminLevel.h  CustomerLevel.h
repo/: AirportRepository.cpp  AirportRepository.h  FlightRepository.cpp  FlightRepository.h  RepositoryInterface.h  UserRepository.cpp  UserRepository.h
service/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h
ui/: CLI.cpp  CLI.h
util/: IdGenerator.cpp  IdGenerator.h  RepositoryUtils.h
